--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <picture>
               <source 
                 media="(min-width: 650px)"
-                srcset="images/promo.png">
+                srcset="images/promo_m.png">
               <source 
                 media="(min-width: 465px)"
                 srcset="images/promo_m.png">
