--- a/gallery.html
+++ b/gallery.html
@@ -46,9 +46,9 @@
             <div class="icon d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
             <div class="text pl-3 pl-md-3">
               <p class="hr"><span>Jam Praktek</span></p>
-              <p class="time"><span>Sabtu, Minggu, Senin, Kamis:</span> <span>08:00 - 21:00</span></p>
-              <p class="time"><span>Rabu & Jumat:</span> <span>14:00 - 21:00</span></p>
-              <p class="time"><span>Selasa : </span><span>Libur</span></p>
+              <p class="time"><span>Sab, Min, Sen, Kam:</span> <span>08:00 - 21:00</span> (dg reservasi) </p>
+              <p class="time"><span>Rab & Jum:</span> <span>14:00 - 21:00</span> (dg reservasi) </p>
+              <p class="time"><span>Sel : </span><span>Libur</span></p>
             </div>
           </div>
         </div>
