--- a/promo.html
+++ b/promo.html
@@ -101,12 +101,12 @@
             <picture>
               <source 
                 media="(min-width: 650px)"
-                srcset="images/promo.png">
+                srcset="images/promo_nov.png">
               <source 
                 media="(min-width: 465px)"
-                srcset="images/promo_m.png">
+                srcset="images/promo_m_nov.png">
               <img 
-                src="images/promo_m.png" 
+                src="images/promo_m_nov.png" 
                 alt="promo">
             </picture>    
           </div>
