--- a/promo.html
+++ b/promo.html
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="row">
-          <div>
+          <div class="text-center">
             <picture>
               <source 
                 media="(min-width: 650px)"
