--- a/index.html
+++ b/index.html
@@ -102,19 +102,31 @@
 
 
     <section class="ftco-section">
-	  <div class="container text-center">
-	    <div class="mb-5 pb-2">
-	      <span class="subheading">Promo</span>
-	      <p>Promo yang masih berlaku</p>
-	    </div>
-	    <picture>
-	      <source media="(min-width: 650px)" srcset="images/promo_nov.png">
-	      <source media="(min-width: 465px)" srcset="images/promo_m_nov.png">
-	      <img src="images/promo_m_nov.png" alt="promo" class="img-fluid mx-auto d-block">
-	    </picture>
-	  </div>
-	</section>
-
+      <div class="container">
+        <div class="row justify-content-center mb-5 pb-2">
+          <div class="col-md-8 text-center heading-section ftco-animate">
+            <span class="subheading">Promo</span>
+            <!-- <h2 class="mb-4">Our Pricing</h2> -->
+            <p>Promo yang masih berlaku</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="text-center">
+            <picture>
+              <source 
+                media="(min-width: 650px)"
+                srcset="images/promo_nov.png">
+              <source 
+                media="(min-width: 465px)"
+                srcset="images/promo_m_nov.png">
+              <img 
+                src="images/promo_m_nov.png" 
+                alt="promo">
+            </picture>    
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="ftco-intro" style="background-image: url(images/dept-3.png);" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
