--- a/blog.html
+++ b/blog.html
@@ -30,9 +30,14 @@
     <div class="py-md-5 py-4 border-bottom">
     	<div class="container">
     		<div class="row no-gutters d-flex align-items-start align-items-center px-3 px-md-0">
-    			<div class="col-md-4 order-md-2 mb-2 mb-md-0 align-items-center text-center">
-		    		<a class="navbar-brand" href="index.html">Dentista<span>Dental Clinic</span></a>
-	    		</div>
+    			<div class="col-12 col-md-4 order-md-2 mb-2 mb-md-0 d-flex justify-content-center text-center">
+					<a class="navbar-brand" href="index.html">
+						Tentang 
+						<img src="images/logo_tentang_dental.png" alt="tentang_dental"> 
+						Dental
+						<span>Praktek Dokter Gigi Spesialis Konvervasi</span>
+					</a>
+				</div>
 	    		<div class="col-md-4 order-md-1 d-flex topper mb-md-0 mb-2 align-items-center text-md-right">
 	    			<div class="icon d-flex justify-content-center align-items-center order-md-last">
 	    				<span class="icon-map"></span>
