--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </div>
               </div>      
             </div>
-            <div class="col-md-3 d-flex services align-self-stretch p-4 ftco-animate">
+        <div class="col-md-3 d-flex services align-self-stretch p-4 ftco-animate">
               <div class="media block-6 d-block text-center">
                 <div class="icon d-flex justify-content-center align-items-center">
                   <span class="flaticon-tooth-with-braces"></span>
@@ -269,7 +269,18 @@
                   <p>Aligner transparan inovatif yang berfungsi untuk merapikan gigi tanpa behel. Dibuat sesuai dengan kontur gigi sehingga nyaman. Dapat dilepas pasang sehingga praktis dan minim kontrol.</p>
                 </div>
               </div>      
-            </div>  
+            </div>
+		<div class="col-md-3 d-flex services align-self-stretch p-4 ftco-animate">
+              <div class="media block-6 d-block text-center">
+                <div class="icon d-flex justify-content-center align-items-center">
+                  <span class="flaticon-shiny-tooth"></span>
+                </div>
+                <div class="media-body p-2 mt-3">
+                  <h3 class="heading">Crown</h3>
+                  <p>Pembuatan crown gigi adalah sebuah prosedur dengan cara melapisi seluruh permukaan gigi yang rusak, rapuh, atau telah mengalami perawatan saluran akar dengan mahkota tiruan.</p>
+                </div>
+              </div>      
+            </div>
         <div class="col-md-3 d-flex services align-self-stretch p-4 ftco-animate">
               <div class="media block-6 d-block text-center">
                 <div class="icon d-flex justify-content-center align-items-center">
